# LearnPython

PythonProject/: README.md  main.py  pyproject.toml
PythonProject/src/: masks.py  processing.py  widget.py
Tests/: SkyProMod1Ex4.py  TestEnLanguage.py
