[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Linad <linad43merzlikin@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
lint = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)"
]
