[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Linad",email = "linad43merzlikin@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "venv"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
